# bam2tcc

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  ChromMetaInfo.hpp  Exon.hpp  FileMetaInfo.hpp  FileUtil.cpp  FileUtil.hpp  Mapper.cpp  Mapper.hpp  Read.cpp  Read.hpp  Semaphore.hpp  SequenceNumID.cpp  SequenceNumID.hpp  TCC_Matrix.cpp  TCC_Matrix.hpp  Transcript.cpp  Transcript.hpp  common.cpp  common.hpp  debugUtil.cpp  debug_util.cpp  exon.hpp  file_io.cpp  file_io.hpp  gff_io.cpp  gff_io.hpp  info.txt  kallisto_util.cpp  kallisto_util.hpp  main.cpp  sam_io.cpp  sam_io.hpp  semaphore.hpp  structs.hpp  timing_tests.cpp  util.cpp  util.hpp
